--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
     <div class="wrapper">
       <nav>
-        <label>Mini Challenges2.0</label>
+        <h1>Mini Challenges2.0</h1>
         <ul>
-          <li><a href="/pages/todoList.html">To-Do list</a></li>
+          <li><a href="./pages/todoList.html">To-Do list</a></li>
           <li><a href="">Expense Tracker</a></li>
           <li><a href="">Note Taker</a></li>
           <li><a href="">Vowel Counter</a></li>
