--- a/pages/todoList.html
+++ b/pages/todoList.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
-    todo list
+    <div class="wrapper">
+      <h1>To Do List</h1>
+    </div>
   </body>
 </html>
